#pragma once

class Disseminator {

};
