#pragma once

class Trade {

};
